Makefile.am: Add -Wall to CPPFLAGS.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ bin_PROGRAMS = lifesim
 noinst_LIBRARIES = liblife.a 
 
 LDADD = $(noinst_LIBRARIES)
-AM_CPPFLAGS = -I$(top_srcdir)/include -g
+AM_CPPFLAGS = -I$(top_srcdir)/include -g -Wall
 
 lifesim_SOURCES = frontend/main.cpp
 lifesim_LDADD = $(LDADD)
