names: Generate random names.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,10 +2,10 @@ bin_PROGRAMS = lifesim
 noinst_LIBRARIES = liblife.a 
 
 LDADD = $(noinst_LIBRARIES)
-AM_CPPFLAGS = -I$(top_srcdir)/include -g -Wall
+AM_CPPFLAGS = -I$(top_srcdir)/include -g -Wall -lcurl
 
 lifesim_SOURCES = frontend/main.cpp
-lifesim_LDADD = $(LDADD)
+lifesim_LDADD = $(LDADD) -lcurl
 
 liblife_a_SOURCES = \
     $(top_srcdir)/backend/events/urgent_life_event.cpp \
@@ -14,4 +14,5 @@ liblife_a_SOURCES = \
     $(top_srcdir)/backend/life/life.cpp \
     $(top_srcdir)/backend/names/name_generator.cpp \
     $(top_srcdir)/backend/nations/nation_generator.cpp \
-    $(top_srcdir)/backend/school/life_education.cpp
+    $(top_srcdir)/backend/school/life_education.cpp \
+    $(top_srcdir)/backend/network/network.cpp
