jobs: Add beginnings of jobs.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ bin_PROGRAMS = lifesim
 noinst_LIBRARIES = liblife.a 
 
 LDADD = $(noinst_LIBRARIES)
-AM_CPPFLAGS = -I$(top_srcdir)/include -g -Wall -lcurl
+AM_CPPFLAGS = -I$(top_srcdir)/include -g -Wall
 
 lifesim_SOURCES = frontend/main.cpp
 lifesim_LDADD = $(LDADD) -lcurl
@@ -15,4 +15,5 @@ liblife_a_SOURCES = \
     $(top_srcdir)/backend/names/name_generator.cpp \
     $(top_srcdir)/backend/nations/nation_generator.cpp \
     $(top_srcdir)/backend/school/life_education.cpp \
-    $(top_srcdir)/backend/network/network.cpp
+    $(top_srcdir)/backend/network/network.cpp \
+    $(top_srcdir)/backend/jobs/jobs.cpp
