--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -10,8 +10,11 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
     steps:
+    - uses: awalsh128/cache-apt-pkgs-action@latest
+      with:
+        packages: libcurl4-openssl-dev
+        version: 1.0
     - uses: actions/checkout@v3
     - name: configure
       run: ./configure
