tools: Add include/ to Makefile.am sources.

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,10 @@ noinst_LIBRARIES = liblife.a
 LDADD = $(noinst_LIBRARIES)
 AM_CPPFLAGS = -I$(srcdir)/include -g -Wall
 
-lifesim_SOURCES = frontend/main.cpp
+lifesim_SOURCES = \
+    $(srcdir)/frontend/main.cpp \
+    $(srcdir)/include/interface.hpp
+
 lifesim_LDADD = $(LDADD) -lcurl
 
 liblife_a_SOURCES = \
@@ -16,4 +19,11 @@ liblife_a_SOURCES = \
     $(srcdir)/backend/nations/nation_generator.cpp \
     $(srcdir)/backend/school/life_education.cpp \
     $(srcdir)/backend/network/network.cpp \
-    $(srcdir)/backend/jobs/jobs.cpp
+    $(srcdir)/backend/jobs/jobs.cpp \
+    $(srcdir)/include/events.hpp \
+    $(srcdir)/include/jobs.hpp \
+    $(srcdir)/include/life.hpp \
+    $(srcdir)/include/names.hpp \
+    $(srcdir)/include/nations.hpp \
+    $(srcdir)/include/network.hpp \
+    $(srcdir)/include/school.hpp
