--- a/Makefile.in
+++ b/Makefile.in
@@ -89,7 +89,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-bin_PROGRAMS = lifesim$(EXEEXT)
+bin_PROGRAMS = lifesim_terminal$(EXEEXT) lifesim_gui$(EXEEXT)
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
@@ -124,9 +124,12 @@ am_liblife_a_OBJECTS = backend/events/urgent_life_event.$(OBJEXT) \
 	backend/network/network.$(OBJEXT) backend/jobs/job.$(OBJEXT) \
 	backend/jobs/company.$(OBJEXT) backend/jobs/employer.$(OBJEXT)
 liblife_a_OBJECTS = $(am_liblife_a_OBJECTS)
-am_lifesim_OBJECTS = frontend/main.$(OBJEXT)
-lifesim_OBJECTS = $(am_lifesim_OBJECTS)
-lifesim_DEPENDENCIES = $(LDADD)
+am_lifesim_gui_OBJECTS = frontend/gui/main.$(OBJEXT)
+lifesim_gui_OBJECTS = $(am_lifesim_gui_OBJECTS)
+lifesim_gui_DEPENDENCIES = $(LDADD)
+am_lifesim_terminal_OBJECTS = frontend/terminal/main.$(OBJEXT)
+lifesim_terminal_OBJECTS = $(am_lifesim_terminal_OBJECTS)
+lifesim_terminal_DEPENDENCIES = $(LDADD)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -152,7 +155,8 @@ am__depfiles_remade = backend/events/$(DEPDIR)/urgent_life_event.Po \
 	backend/nations/$(DEPDIR)/nation_generator.Po \
 	backend/network/$(DEPDIR)/network.Po \
 	backend/school/$(DEPDIR)/life_education.Po \
-	frontend/$(DEPDIR)/main.Po
+	frontend/gui/$(DEPDIR)/main.Po \
+	frontend/terminal/$(DEPDIR)/main.Po
 am__mv = mv -f
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
@@ -179,8 +183,10 @@ AM_V_CCLD = $(am__v_CCLD_@AM_V@)
 am__v_CCLD_ = $(am__v_CCLD_@AM_DEFAULT_V@)
 am__v_CCLD_0 = @echo "  CCLD    " $@;
 am__v_CCLD_1 = 
-SOURCES = $(liblife_a_SOURCES) $(lifesim_SOURCES)
-DIST_SOURCES = $(liblife_a_SOURCES) $(lifesim_SOURCES)
+SOURCES = $(liblife_a_SOURCES) $(lifesim_gui_SOURCES) \
+	$(lifesim_terminal_SOURCES)
+DIST_SOURCES = $(liblife_a_SOURCES) $(lifesim_gui_SOURCES) \
+	$(lifesim_terminal_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -330,11 +336,16 @@ top_srcdir = @top_srcdir@
 noinst_LIBRARIES = liblife.a 
 LDADD = $(noinst_LIBRARIES)
 AM_CPPFLAGS = -I$(srcdir)/include -g -Wall
-lifesim_SOURCES = \
-    $(srcdir)/frontend/main.cpp \
+lifesim_terminal_SOURCES = \
+    $(srcdir)/frontend/terminal/main.cpp \
     $(srcdir)/include/interface.hpp
 
-lifesim_LDADD = $(LDADD) -lcurl
+lifesim_terminal_LDADD = $(LDADD) -lcurl
+lifesim_gui_SOURCES = \
+    $(srcdir)/frontend/gui/main.cpp \
+    $(srcdir)/include/interface.hpp
+
+lifesim_gui_LDADD = $(LDADD) -lcurl -lm -lraylib
 liblife_a_SOURCES = \
     $(srcdir)/backend/events/urgent_life_event.cpp \
     $(srcdir)/backend/events/year_logger.cpp \
@@ -517,18 +528,30 @@ liblife.a: $(liblife_a_OBJECTS) $(liblife_a_DEPENDENCIES) $(EXTRA_liblife_a_DEPE
 	$(AM_V_at)-rm -f liblife.a
 	$(AM_V_AR)$(liblife_a_AR) liblife.a $(liblife_a_OBJECTS) $(liblife_a_LIBADD)
 	$(AM_V_at)$(RANLIB) liblife.a
-frontend/$(am__dirstamp):
-	@$(MKDIR_P) frontend
-	@: > frontend/$(am__dirstamp)
-frontend/$(DEPDIR)/$(am__dirstamp):
-	@$(MKDIR_P) frontend/$(DEPDIR)
-	@: > frontend/$(DEPDIR)/$(am__dirstamp)
-frontend/main.$(OBJEXT): frontend/$(am__dirstamp) \
-	frontend/$(DEPDIR)/$(am__dirstamp)
+frontend/gui/$(am__dirstamp):
+	@$(MKDIR_P) frontend/gui
+	@: > frontend/gui/$(am__dirstamp)
+frontend/gui/$(DEPDIR)/$(am__dirstamp):
+	@$(MKDIR_P) frontend/gui/$(DEPDIR)
+	@: > frontend/gui/$(DEPDIR)/$(am__dirstamp)
+frontend/gui/main.$(OBJEXT): frontend/gui/$(am__dirstamp) \
+	frontend/gui/$(DEPDIR)/$(am__dirstamp)
 
-lifesim$(EXEEXT): $(lifesim_OBJECTS) $(lifesim_DEPENDENCIES) $(EXTRA_lifesim_DEPENDENCIES) 
-	@rm -f lifesim$(EXEEXT)
-	$(AM_V_CXXLD)$(CXXLINK) $(lifesim_OBJECTS) $(lifesim_LDADD) $(LIBS)
+lifesim_gui$(EXEEXT): $(lifesim_gui_OBJECTS) $(lifesim_gui_DEPENDENCIES) $(EXTRA_lifesim_gui_DEPENDENCIES) 
+	@rm -f lifesim_gui$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(lifesim_gui_OBJECTS) $(lifesim_gui_LDADD) $(LIBS)
+frontend/terminal/$(am__dirstamp):
+	@$(MKDIR_P) frontend/terminal
+	@: > frontend/terminal/$(am__dirstamp)
+frontend/terminal/$(DEPDIR)/$(am__dirstamp):
+	@$(MKDIR_P) frontend/terminal/$(DEPDIR)
+	@: > frontend/terminal/$(DEPDIR)/$(am__dirstamp)
+frontend/terminal/main.$(OBJEXT): frontend/terminal/$(am__dirstamp) \
+	frontend/terminal/$(DEPDIR)/$(am__dirstamp)
+
+lifesim_terminal$(EXEEXT): $(lifesim_terminal_OBJECTS) $(lifesim_terminal_DEPENDENCIES) $(EXTRA_lifesim_terminal_DEPENDENCIES) 
+	@rm -f lifesim_terminal$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(lifesim_terminal_OBJECTS) $(lifesim_terminal_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -540,7 +563,8 @@ mostlyclean-compile:
 	-rm -f backend/nations/*.$(OBJEXT)
 	-rm -f backend/network/*.$(OBJEXT)
 	-rm -f backend/school/*.$(OBJEXT)
-	-rm -f frontend/*.$(OBJEXT)
+	-rm -f frontend/gui/*.$(OBJEXT)
+	-rm -f frontend/terminal/*.$(OBJEXT)
 
 distclean-compile:
 	-rm -f *.tab.c
@@ -556,7 +580,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@backend/nations/$(DEPDIR)/nation_generator.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@backend/network/$(DEPDIR)/network.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@backend/school/$(DEPDIR)/life_education.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@frontend/$(DEPDIR)/main.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@frontend/gui/$(DEPDIR)/main.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@frontend/terminal/$(DEPDIR)/main.Po@am__quote@ # am--include-marker
 
 $(am__depfiles_remade):
 	@$(MKDIR_P) $(@D)
@@ -859,8 +884,10 @@ distclean-generic:
 	-rm -f backend/network/$(am__dirstamp)
 	-rm -f backend/school/$(DEPDIR)/$(am__dirstamp)
 	-rm -f backend/school/$(am__dirstamp)
-	-rm -f frontend/$(DEPDIR)/$(am__dirstamp)
-	-rm -f frontend/$(am__dirstamp)
+	-rm -f frontend/gui/$(DEPDIR)/$(am__dirstamp)
+	-rm -f frontend/gui/$(am__dirstamp)
+	-rm -f frontend/terminal/$(DEPDIR)/$(am__dirstamp)
+	-rm -f frontend/terminal/$(am__dirstamp)
 
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
@@ -883,7 +910,8 @@ distclean: distclean-am
 	-rm -f backend/nations/$(DEPDIR)/nation_generator.Po
 	-rm -f backend/network/$(DEPDIR)/network.Po
 	-rm -f backend/school/$(DEPDIR)/life_education.Po
-	-rm -f frontend/$(DEPDIR)/main.Po
+	-rm -f frontend/gui/$(DEPDIR)/main.Po
+	-rm -f frontend/terminal/$(DEPDIR)/main.Po
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
@@ -942,7 +970,8 @@ maintainer-clean: maintainer-clean-am
 	-rm -f backend/nations/$(DEPDIR)/nation_generator.Po
 	-rm -f backend/network/$(DEPDIR)/network.Po
 	-rm -f backend/school/$(DEPDIR)/life_education.Po
-	-rm -f frontend/$(DEPDIR)/main.Po
+	-rm -f frontend/gui/$(DEPDIR)/main.Po
+	-rm -f frontend/terminal/$(DEPDIR)/main.Po
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
