--- a/Makefile.in
+++ b/Makefile.in
@@ -1032,6 +1032,9 @@ uninstall-am: uninstall-binPROGRAMS
 .PRECIOUS: Makefile
 
 
+$(srcdir)/raylib/raylib/libraylib.a: $(srcdir)/raylib/Makefile
+	$(MAKE) -C $(srcdir)/raylib
+
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
