--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,6 +16,8 @@ jobs:
         packages: libcurl4-openssl-dev
         version: 1.0
     - uses: actions/checkout@v3
+    - name: submodules
+      run: git submodule init
     - name: configure
       run: ./configure
     - name: make
