--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -17,7 +17,7 @@ jobs:
         version: 1.0
     - uses: actions/checkout@v3
     - name: submodules
-      run: git submodule init
+      run: git submodule init; git submodule update
     - name: configure
       run: ./configure
     - name: make
