--- a/Makefile.in
+++ b/Makefile.in
@@ -1036,14 +1036,12 @@ uninstall-am: uninstall-binPROGRAMS
 .PRECIOUS: Makefile
 
 
-$(srcdir)/raylib/raylib/libraylib.a: $(srcdir)/raylib/Makefile
+$(srcdir)/raylib/libraylib.a: $(srcdir)/raylib/Makefile
 	$(MAKE) -C $(srcdir)/raylib
-	echo "srcdir:"
-	ls $(srcdir)
-	echo "srcdir/raylib:"
-	ls $(srcdir)/raylib
-	echo "srcdir/raylib/raylib:"
-	ls $(srcdir)/raylib/raylib
+
+$(srcdir)/raylib/raylib/libraylib.a: $(srcdir)/raylib/Makefile
+	mkdir -p $(srcdir)/raylib/raylib
+	if ! [ -e $(srcdir)/raylib/libraylib.a ]; then $(MAKE) -C $(srcdir)/raylib; fi;
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
