tools: Attempt #5 at fixing build.

--- a/Makefile.in
+++ b/Makefile.in
@@ -1036,12 +1036,15 @@ uninstall-am: uninstall-binPROGRAMS
 .PRECIOUS: Makefile
 
 
+#For some reason, raylib can either put libraylib.a in $(srcdir)/raylib/libraylib.a OR $(srcdir)/raylib/raylib/libraylib.a 
 $(srcdir)/raylib/libraylib.a: $(srcdir)/raylib/Makefile
 	$(MAKE) -C $(srcdir)/raylib
+	if [ -e $(srcdir)/raylib/raylib/libraylib.a ]; then mv $(srcdir)/raylib/raylib/libraylib.a $(srcdir)/raylib/libraylib.a; fi;
 
 $(srcdir)/raylib/raylib/libraylib.a: $(srcdir)/raylib/Makefile
 	mkdir -p $(srcdir)/raylib/raylib
-	if ! [ -e $(srcdir)/raylib/libraylib.a ]; then $(MAKE) -C $(srcdir)/raylib; fi;
+	$(MAKE) -C $(srcdir)/raylib
+	if [ -e $(srcdir)/raylib/libraylib.a ]; then mv $(srcdir)/raylib/libraylib.a $(srcdir)/raylib/raylib/libraylib.a; fi;
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
