--- a/Makefile.in
+++ b/Makefile.in
@@ -126,8 +126,7 @@ am_liblife_a_OBJECTS = backend/events/urgent_life_event.$(OBJEXT) \
 liblife_a_OBJECTS = $(am_liblife_a_OBJECTS)
 am_lifesim_gui_OBJECTS = frontend/gui/lifesim_gui-main.$(OBJEXT)
 lifesim_gui_OBJECTS = $(am_lifesim_gui_OBJECTS)
-lifesim_gui_DEPENDENCIES = $(LDADD) \
-	$(srcdir)/raylib/raylib/libraylib.a
+lifesim_gui_DEPENDENCIES = $(LDADD) ./raylib/libraylib.a
 am_lifesim_terminal_OBJECTS = frontend/terminal/main.$(OBJEXT)
 lifesim_terminal_OBJECTS = $(am_lifesim_terminal_OBJECTS)
 lifesim_terminal_DEPENDENCIES = $(LDADD)
@@ -355,7 +354,7 @@ lifesim_gui_SOURCES = \
     $(srcdir)/include/interface.hpp \
     $(srcdir)/raygui/src/raygui.h
 
-lifesim_gui_LDADD = $(LDADD) -lcurl $(srcdir)/raylib/raylib/libraylib.a
+lifesim_gui_LDADD = $(LDADD) -lcurl ./raylib/libraylib.a
 lifesim_gui_CPPFLAGS = $(AM_CPPFLAGS) -I$(srcdir)/raylib/src -I$(srcdir)/raygui/src
 liblife_a_SOURCES = \
     $(srcdir)/backend/events/urgent_life_event.cpp \
@@ -1036,15 +1035,8 @@ uninstall-am: uninstall-binPROGRAMS
 .PRECIOUS: Makefile
 
 
-#For some reason, raylib can either put libraylib.a in $(srcdir)/raylib/libraylib.a OR $(srcdir)/raylib/raylib/libraylib.a 
-$(srcdir)/raylib/libraylib.a: $(srcdir)/raylib/Makefile
-	$(MAKE) -C $(srcdir)/raylib
-	if [ -e $(srcdir)/raylib/raylib/libraylib.a ]; then mv $(srcdir)/raylib/raylib/libraylib.a $(srcdir)/raylib/libraylib.a; fi;
-
-$(srcdir)/raylib/raylib/libraylib.a: $(srcdir)/raylib/Makefile
-	mkdir -p $(srcdir)/raylib/raylib
-	$(MAKE) -C $(srcdir)/raylib
-	if [ -e $(srcdir)/raylib/libraylib.a ]; then mv $(srcdir)/raylib/libraylib.a $(srcdir)/raylib/raylib/libraylib.a; fi;
+./raylib/libraylib.a: ./raylib/Makefile
+	$(MAKE) -C ./raylib
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
